Minor cleanups and bug fixes

--- a/CFApp - Build Files/Languages/English.xml
+++ b/CFApp - Build Files/Languages/English.xml
@@ -6,7 +6,7 @@
     <TITLE>TimeZone Settings</TITLE>
     <DESCRIPTION>Configure the functions</DESCRIPTION>
     <DISPLAYNAME>DISPLAY NAME</DISPLAYNAME>
+    <REFRESHINTERVAL>Refresh Inteval</REFRESHINTERVAL>
     <LOGEVENTS>LOG EVENTS</LOGEVENTS>
   </SETUP>
 </APPLANG>
-
